Fixing full map/header overlap issue

--- a/public/css/less/page.less
+++ b/public/css/less/page.less
@@ -173,6 +173,7 @@
             &.norm {
                 top:0;
                 left:0;
+                .transition( all @transpeed );
                 &:before {
                     content: "\f053"; /* chevron left */
                     .border-radius( 4px 0 0 4px );
@@ -250,11 +251,16 @@
             width:100%;
             height:100%;
             .norm {
+				top:45%;
                 &:before {
                     content: "\f054"; /* chevron right */
                     .border-radius( 0 4px 4px 0 );
                 }
             }
+            .min {
+				top:auto;
+				bottom:100%;
+			}
             .max {
                 display:none;
             }
